@@ -7,13 +7,27 @@ import java.util.List;
 public class Stich {
   private List<Karte> gelegteKarten;
   private Spieler spielerAnDerReihe;
-  private Farbe ersteFarbe;
+  private final Farbe ersteFarbe;
   private Karte siegerKarte;
 
-  public Stich(Spieler spielerAnDerReihe) {
+  public Stich(Spieler spieler, List<Karte> gelegteKarten) {
+    this.gelegteKarten = gelegteKarten;
+    this.spielerAnDerReihe = spieler;
+    this.ersteFarbe = gelegteKarten.getFirst().getFarbe();
+    this.siegerKarte = null;
+  }
+
+  public Stich(Spieler spieler) {
     this.gelegteKarten = new ArrayList<>();
-    this.spielerAnDerReihe = spielerAnDerReihe;
-    this.ersteFarbe = null;
+    this.spielerAnDerReihe = spieler;
+    this.ersteFarbe = gelegteKarten.getFirst().getFarbe();
+    this.siegerKarte = null;
+  }
+
+  public Stich(Spieler spieler, Farbe ersteFarbe) {
+    this.gelegteKarten = new ArrayList<>();
+    this.spielerAnDerReihe = spieler;
+    this.ersteFarbe = ersteFarbe;
     this.siegerKarte = null;
   }
 
@@ -21,25 +35,25 @@ public class Stich {
     if (this.getGelegteKarten().contains(new Karte(Farbe.KREUZ, Wert.BUBE))) {
       return spieler.get(
           (this.getGelegteKarten().indexOf(new Karte(Farbe.KREUZ, Wert.BUBE))
-                  + spieler.indexOf(this.getSpielerAnDerReihe()))
+              + spieler.indexOf(this.getSpielerAnDerReihe()))
               % 3);
     }
     if (this.getGelegteKarten().contains(new Karte(Farbe.PIK, Wert.BUBE))) {
       return spieler.get(
           (this.getGelegteKarten().indexOf(new Karte(Farbe.PIK, Wert.BUBE))
-                  + spieler.indexOf(this.getSpielerAnDerReihe()))
+              + spieler.indexOf(this.getSpielerAnDerReihe()))
               % 3);
     }
     if (this.getGelegteKarten().contains(new Karte(Farbe.HERZ, Wert.BUBE))) {
       return spieler.get(
           (this.getGelegteKarten().indexOf(new Karte(Farbe.HERZ, Wert.BUBE))
-                  + spieler.indexOf(this.getSpielerAnDerReihe()))
+              + spieler.indexOf(this.getSpielerAnDerReihe()))
               % 3);
     }
     if (this.getGelegteKarten().contains(new Karte(Farbe.KARO, Wert.BUBE))) {
       return spieler.get(
           (this.getGelegteKarten().indexOf(new Karte(Farbe.KARO, Wert.BUBE))
-                  + spieler.indexOf(this.getSpielerAnDerReihe()))
+              + spieler.indexOf(this.getSpielerAnDerReihe()))
               % 3);
     }
     return null;
@@ -47,7 +61,7 @@ public class Stich {
 
   public Spieler ermittleSiegerFallsTrumpf(List<Spieler> spieler, Trumpffarbe trumpffarbe) {
     List<Karte> trumpfListe =
-        Arrays.asList(
+        List.of(
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.SIEBEN),
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.ACHT),
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.NEUN),
@@ -55,27 +69,29 @@ public class Stich {
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.BUBE),
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.DAME),
             new Karte(trumpffarbe.getTrumpffarbe(), Wert.KOENIG),
-            new Karte(trumpffarbe.getTrumpffarbe(), Wert.ASS));
+            new Karte(trumpffarbe.getTrumpffarbe(), Wert.ASS)
+        );
 
     for (Karte i : trumpfListe) {
-      if (this.getGelegteKarten().contains(i)) {
-        Karte gewinnerKarte = null;
-        for (Karte j : this.getGelegteKarten()) {
-          if (gewinnerKarte == null) gewinnerKarte = j;
-          else {
-            if (j.equals(gewinnerKarte)) return null;
-            if (j.getFarbe() == trumpffarbe.getTrumpffarbe()
-                && j.getWert().getStaerke() > gewinnerKarte.getWert().getStaerke()) {
-              gewinnerKarte = j;
-            }
-          }
+      if (!this.getGelegteKarten().contains(i))
+        continue;
+      Karte gewinnerKarte = null;
+      for (Karte j : this.getGelegteKarten()) {
+        if (gewinnerKarte == null) {
+          gewinnerKarte = j;
+          continue;
         }
-        this.setSiegerKarte(gewinnerKarte);
-        return spieler.get(
-            (this.getGelegteKarten().indexOf(gewinnerKarte)
-                    + spieler.indexOf(this.getSpielerAnDerReihe()))
-                % 3);
+        if (j.equals(gewinnerKarte)) return null;
+        if (j.getFarbe() == trumpffarbe.getTrumpffarbe()
+            && j.getWert().getStaerke() > gewinnerKarte.getWert().getStaerke()) {
+          gewinnerKarte = j;
+        }
       }
+      this.setSiegerKarte(gewinnerKarte);
+      return spieler.get(
+          (this.getGelegteKarten().indexOf(gewinnerKarte)
+              + spieler.indexOf(this.getSpielerAnDerReihe()))
+              % 3);
     }
     return null;
   }
@@ -108,7 +124,7 @@ public class Stich {
     this.setSiegerKarte(gewinnerKarte);
     return spieler.get(
         (this.getGelegteKarten().indexOf(gewinnerKarte)
-                + spieler.indexOf(this.getSpielerAnDerReihe()))
+            + spieler.indexOf(this.getSpielerAnDerReihe()))
             % 3);
   }
 
@@ -153,5 +169,9 @@ public class Stich {
 
   public void setSiegerKarte(Karte karte) {
     this.siegerKarte = karte;
+  }
+
+  public void setSpielerAnDerReihe(Spieler spielerAnDerReihe) {
+    this.spielerAnDerReihe = spielerAnDerReihe;
   }
 }
